2001-07-11 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapetype.c: Only report a pass summary when stderr is not
	  a tty.  Deal with some obscure end cases.

2001-07-10 John R. Jackson <jrj@purdue.edu>

	* server-src/Makefile.am: Backport development branch chg-scsi code
	  to 2.4.2.
	* changer-src/chg-scsi.c: Ditto.
	* changer-src/libscsi.h: Ditto.
	* changer-src/scsi-aix.c: Ditto.
	* changer-src/scsi-bsd.c: Ditto.
	* changer-src/scsi-cam.c: Ditto.
	* changer-src/scsi-changer-driver.c: Ditto.
	* changer-src/scsi-defs.h: Ditto.
	* changer-src/scsi-hpux.c: Ditto.
	* changer-src/scsi-hpux_new.c: Ditto.
	* changer-src/scsi-irix.c: Ditto.
	* changer-src/scsi-linux.c: Ditto.
	* changer-src/scsi-solaris.c: Ditto.
	* changer-src/sense.c: Ditto.

2001-07-10 John R. Jackson <jrj@purdue.edu>

	* server-src/amcheck.c: Move user name check before attempt to create
	  temp files so more appropriate error message is generated.

2001-07-09 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Fix error end case unitialized variable.

2001-07-05 John R. Jackson <jrj@purdue.edu>

	* docs/TAPE.CHANGERS: Minor docs/TAPE.CHANGERS update to clarify
	  that -slot and -eject unload and put the current tape away.

2001-07-02 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add yet another ONLINEREGEX, this one
	  compliments of Nick (n_hibma@qubesoft.com) for some FreeBSD variant.

2001-06-29 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapeio.c: Move the device name parsing routines from the
	  RAIT module to tapeio and make them generic.  This allows one
	  module to open another, e.g. rait:{null:,z1,z2,z3}.  Maintain
	  both the original open flags and mask and use them on the real open.
	* tape-src/amdd.c: Make sure this compiles "stand-alone".  To do so,
	  use: gcc -Wall -DNO_AMANDA amdd.c output-rait.c output-tape.c.
	  Abort as soon as one of the open calls fails instead of waiting
	  for read/write to report a bad file descriptor.